@@ -6,16 +6,15 @@ package com.novaserve.fitness.security.auth;
 import com.novaserve.fitness.users.model.Role;
 import java.util.Collection;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
 @Service
 public class SecurityUtil {
-  public Collection<? extends GrantedAuthority> mapRolesToAuthorities(Set<Role> roles) {
-    return roles.stream()
-        .map(role -> new SimpleGrantedAuthority(role.getName()))
-        .collect(Collectors.toList());
-  }
+    public Collection<? extends GrantedAuthority> mapRolesToAuthorities(Set<Role> roles) {
+        return roles.stream()
+                .map(role -> new SimpleGrantedAuthority(role.getName()))
+                .toList();
+    }
 }
